
[package]
name = "kv"
version = "0.1.0"
edition = "2018"

[dependencies]
bytes = "1"          # 高效处理网络 buffer 的库
dashmap = "5.4.0"    #
http = "0.2.9"
prost = "0.8"        # 处理 protobuf 的代码
thiserror = "1.0.40" #
tracing = "0.1"      # 日志处理

[dev-dependencies]
anyhow = "1"          # 错误处理
async-prost = "0.2.1" # 支持把 protobuf 封装成 TCP frame
futures = "0.3"       # 提供 Stream trait
# 异步网络库
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "io-util",
    "macros",
    "net",
] }
tracing-subscriber = "0.2" # 日志处理

[build-dependencies]
prost-build = "0.8" # 编译 protobuf
